--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-terraform",
   "description": "Compile assets using Harp's Terraform pipeline.",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "",
   "author": {
     "name": "Gavin Ballard",
@@ -13,7 +13,7 @@
     "url": "git://githib.com/gavinballard/grunt-terraform.git"
   },
   "bugs": {
-    "url": ""
+    "url": "https://github.com/gavinballard/grunt-terraform/issues"
   },
   "licenses": [
     {
@@ -28,7 +28,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "terraform": "^0.9.0"
+    "terraform": "~0.10.3"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.9.2",
